fix for mobile menu overlapping

--- a/sass/pages.scss
+++ b/sass/pages.scss
@@ -389,6 +389,10 @@ input.custom-search-box {
   z-index: 200;
 }
 
+#navigation ul.links {
+  margin-bottom: 25px;
+}
+
 #navigation li a {
   color: white;
   text-decoration: none;
